# frya-app

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  CLAUDE_CODE_HANDOFF.md  CLAUDE_CODE_PROMPT.txt  FRYA-UI-Briefing-Updated-P46.md  FRYA-UI-MEGA-PROMPT.md  adb_log.txt  backfill_runner.py  docker-compose.ui.yml  generate_trennblatt.py  staging-compose.yml  staging.env.example
agent/: .dockerignore  .env.example  Dockerfile  README.md  RUNBOOK-rule-loading-staging.md  pyproject.toml  requirements.txt
agent/app/: config.py  dependencies.py  llm_config.py  main.py  token_tracking.py
agent/data/: FRYA-CORE-SEED-v2.0.md  agent.md  dms-state.md  memory.md  soul.md  user.md
agent/migrations/: 0010_case_engine.sql  0011_agent_config_extend.sql  0012_gobd_write_once.sql  0013_case_references_unique.sql  0014_upload_batches.sql  0015_communicator_anthropic.sql  0016_user_preferences.sql  0017_vendor_aliases.sql  0018_dunning.sql  0019_totp_2fa.sql  0020_reminders_tokens.sql  0021_multi_tenant.sql  0022_row_level_security.sql
agent/scripts/: migrate_business_profile.sql  seed_test_income.py
agent/tests/: conftest.py  test_accounting_analysis.py  test_accounting_analyst.py  test_accounting_api.py  test_accounting_operator_review.py  test_agent_config.py  test_akaunting_connector.py  test_akaunting_reconciliation.py  test_annotation_actions.py  test_annotation_booking_actions.py  test_annotation_confidence.py  test_annotation_conflict.py  test_annotation_empty.py  test_annotation_extraction.py  test_annotation_patterns.py  test_api_keys_page.py  test_api_surface.py  (+107 more)
(+558 files in other folders)
